--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 			<div class="logo-area">
 				<img class="right" src="planA-Logo.png" alt="Plan A Logo" width="200px">
 			</div>
-			<div class="parallax opacity"></div>
-
-<!--			<div class="pic-heading fullwidth-pic">
-				<img class="opacity" alt="Am Set von Plan A" src="img/image03.jpg">-->
-				<div class="caption">
+			<div class="parallax opacity"></div>		
+			<div class="caption">
 					<span class="border">
             <h1>Danke für Ihre Unterstützung!</h1>
 <!--Count up goes here  -->
@@ -62,7 +59,7 @@
       </section>
 			<section class="media-embed">
 				<video src="trailer.mov" type="video/mov" width="90%" height="auto"
-					poster="img/trailer-standbild.png" autobuffer autoplay controls>
+					poster="trailer-standbild.png" autobuffer autoplay controls>
 					<div>Leider unterstützt Ihr Browser kein HTML5. Wir empfehlen, eine aktuelle Version herunterzuladen.</div>
 				</video>
 			</section>
