--- a/index.html
+++ b/index.html
@@ -15,48 +15,48 @@
 			</div>
 			<div class="parallax opacity"></div>		
 			<div class="caption">
-					<span class="border">
-            <h1>Danke für Ihre Unterstützung!</h1>
+				<span class="border">
+            				<h1>Danke für Ihre Unterstützung!</h1>
 <!--Count up goes here  -->
 
-						<h2>Fördersumme: <span id="primo" class="countup" cup-end="15000" cup-append="€" cup-prepend=""></span></h2>
-						<script>
-							var cu = new counterUp({
-								start: 0,
-								duration: 1000,
-								intvalues: true,
-								interval: 1,
-								prepend: '€',
-								append: ',00'
-							});
-							cu.start();
-						</script>
-						<h3><label for="file">Anteil Gesamtsumme: </label><progress id="file" value="15000" max="70000"> 15000 </progress></h3>
-						<a href="#support" class="button-link">Unterstützen Sie uns</a>
-					</span>
-				</div>
+					<h2>Fördersumme: <span id="primo" class="countup" cup-end="15000" cup-append="€" cup-prepend=""></span></h2>
+					<script>
+						var cu = new counterUp({
+							start: 0,
+							duration: 1000,
+							intvalues: true,
+							interval: 1,
+							prepend: '€',
+							append: ',00'
+						});
+						cu.start();
+					</script>
+					<h3><label for="file">Anteil Gesamtsumme: </label><progress id="file" value="15000" max="70000"> 15000 </progress></h3>
+					<a href="#support" class="button-link">Unterstützen Sie uns</a>
+				</span>
+			</div>
 		</header>
 		<main class="dark-grey">
 			<h1 id="support">Unterstützen Sie uns</h1>
-
+			<p class="font-white">Sie können uns mit der Buchungen oder einer Spende für die Kampagne unterstützen. Für andere Formen der finanziellen Unterstützung über 25.000€ wenden Sie sich bitte an info@plan-a.jetzt</p> 
 			<section class="blue-box dark-grey">
-            <h2>Werden Sie jetzt ein Vorbild!</h2>
-            <br>
-            <h3>Wir drehen Ihr Video für inspirierende Einblicke in a-typische Biografien.</h3>
-            <h3>Sie treffen die Jugendlichen an zwei Terminen zum persönlichen Austausch.</h3>
-      </section>
+           			<h2>Werden Sie jetzt ein Vorbild!</h2>
+            			<br>
+            			<h3>Wir drehen Ihr Video für inspirierende Einblicke in a-typische Biografien.</h3>
+            			<h3>Sie treffen die Jugendlichen an zwei Terminen zum persönlichen Austausch.</h3>
+      			</section>
 			<section class="white-box">
-            <h2>Unterstützen Sie das JOBCAMP</h2>
-            <br>
-            <h3>Ermöglichen Sie echte Chancen!</h3>
-            <h3>Sie erhalten einen Stand auf der Jobmesse und bekommen qualitativ hochwertige Kontakte zu künftigen Praktikanten und Azubis!</h3>
-      </section>
+            			<h2>Unterstützen Sie das JOBCAMP</h2>
+            			<br>
+            			<h3>Ermöglichen Sie echte Chancen!</h3>
+            			<h3>Sie erhalten einen Stand auf der Jobmesse und bekommen qualitativ hochwertige Kontakte zu künftigen Praktikanten und Azubis!</h3>
+      			</section>
 			<section class="black-box">
-            <h2>Spenden Sie für weitere Vorbilder!</h2>
-            <br>
-            <h3>Viele inspirierende Jugendliche können sich keinen Videodreh leisten.</h3>
-            <h3>Geben Sie anderen Menschen eine Stimme und fördern so noch vielfältigere Inspirationen auf Plan A!</h3>
-      </section>
+            			<h2>Spenden Sie für weitere Vorbilder!</h2>
+           			 <br>
+           			 <h3>Viele inspirierende Jugendliche können sich keinen Videodreh leisten.</h3>
+            			<h3>Geben Sie anderen Menschen eine Stimme und fördern so noch vielfältigere Inspirationen auf Plan A!</h3>
+      			</section>
 			<section class="media-embed">
 				<video src="trailer.mov" type="video/mov" width="90%" height="auto"
 					poster="trailer-standbild.png" autobuffer autoplay controls>
