--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</header>
 		<main class="dark-grey">
 			<h1 id="support">Unterstützen Sie uns</h1>
-			<p class="font-white">Sie können uns mit der Buchungen oder einer Spende für die Kampagne unterstützen. Für andere Formen der finanziellen Unterstützung über 25.000€ wenden Sie sich bitte an info@plan-a.jetzt</p> 
+			<p class="font-white">Sie können uns mit der Buchungen oder einer Spende für die Kampagne unterstützen. Für andere Formen der finanziellen Unterstützung über 25.000€ wenden Sie sich bitte an <a href="mailto:info@plan-a.jetzt">info@plan-a.jetzt</a></p> 
 			<section class="blue-box dark-grey">
            			<h2>Werden Sie jetzt ein Vorbild!</h2>
             			<br>
