--- a/index.html
+++ b/index.html
@@ -8,62 +8,83 @@
 		<title>Plan A Fördern</title>
 		<script src="count-up.js"></script>
 	</head>
-	<body class="background">
+	<body class="dark-grey">
 		<header>
 			<div class="logo-area">
 				<img class="right" src="planA-Logo.png" alt="Plan A Logo" width="200px">
 			</div>
-			<div class="parallax opacity"></div>		
-			<div class="caption">
-				<span class="border">
-            				<h1>Danke für Ihre Unterstützung!</h1>
+			<div class="parallax opacity"></div>
+
+<!--			<div class="pic-heading fullwidth-pic">
+				<img class="opacity" alt="Am Set von Plan A" src="image03.jpg">-->
+				<div class="caption">
+					<span class="border">
+            <h1>Danke für Ihre Unterstützung!</h1>
 <!--Count up goes here  -->
 
-					<h2>Fördersumme: <span id="primo" class="countup" cup-end="15000" cup-append="€" cup-prepend=""></span></h2>
-					<script>
-						var cu = new counterUp({
-							start: 0,
-							duration: 1000,
-							intvalues: true,
-							interval: 1,
-							prepend: '€',
-							append: ',00'
-						});
-						cu.start();
-					</script>
-					<h3><label for="file">Anteil Gesamtsumme: </label><progress id="file" value="15000" max="70000"> 15000 </progress></h3>
-					<a href="#support" class="button-link">Unterstützen Sie uns</a>
-				</span>
-			</div>
+						<h2>Fördersumme: <span id="primo" class="countup" cup-end="55000" cup-append="€" cup-prepend=""></span></h2>
+						<script>
+							var cu = new counterUp({
+								start: 0,
+								duration: 1000,
+								intvalues: true,
+								interval: 1,
+								prepend: '€',
+								append: ',00'
+							});
+							cu.start();
+						</script>
+						<a href="#support" class="button-link">Unterstützen Sie uns</a>
+					</span>
+				</div>
 		</header>
 		<main class="dark-grey">
 			<h1 id="support">Unterstützen Sie uns</h1>
-			<p class="font-white">Sie können uns mit der Buchungen oder einer Spende für die Kampagne unterstützen. Für andere Formen der finanziellen Unterstützung über 25.000€ wenden Sie sich bitte an <a href="mailto:info@plan-a.jetzt">info@plan-a.jetzt</a></p> 
+			<p class="font-white">Sie können uns mit der Buchungen oder einer Spende für die Kampagne unterstützen. Wenn Sie als Impact-Partner die Kampagne in Ihrer Region durchführen wollen, wenden Sie sich bitte an <a href="mailto:info@plan-a.jetzt">info@plan-a.jetzt</a></p>
+
 			<section class="blue-box dark-grey">
-           			<h2>Werden Sie jetzt ein Vorbild!</h2>
-            			<br>
-            			<h3>Wir drehen Ihr Video für inspirierende Einblicke in a-typische Biografien.</h3>
-            			<h3>Sie treffen die Jugendlichen an zwei Terminen zum persönlichen Austausch.</h3>
-      			</section>
+            <h2>Werden Sie ein Gesicht von Plan A</h2>
+            <h3>Berichten Sie aus eigener Erfahrung, wie wichtig berufliche (Weiter-)Bildung ist!</h3>
+            <h3>Wir drehen Ihre persönliche Geschichte, mit der Sie Jugendlichen für einen möglichen Weg Mut machen. An zwei Terminen treffen Sie die Jugendlichen zum persönlichen Austausch.</h3>
+						<a href="joblinge.de/jetzt-spenden" class="button-link">Jetzt buchen</a>
+      </section>
 			<section class="white-box">
-            			<h2>Unterstützen Sie das JOBCAMP</h2>
-            			<br>
-            			<h3>Ermöglichen Sie echte Chancen!</h3>
-            			<h3>Sie erhalten einen Stand auf der Jobmesse und bekommen qualitativ hochwertige Kontakte zu künftigen Praktikanten und Azubis!</h3>
-      			</section>
+            <h2>Unterstützen Sie das JOBCAMP</h2>
+            <h3>Ermöglichen Sie echte Jobchancen!</h3>
+            <h3>Sie erhalten einen Stand auf der Jobmesse und bekommen qualitativ hochwertige Kontakte zu künftigen Praktikanten und Azubis!</h3>
+						<a href="joblinge.de/jetzt-spenden" class="button-black">Jetzt reservieren</a>
+			</section>
 			<section class="black-box">
-            			<h2>Spenden Sie für weitere Vorbilder!</h2>
-           			 <br>
-           			 <h3>Viele inspirierende Jugendliche können sich keinen Videodreh leisten.</h3>
-            			<h3>Geben Sie anderen Menschen eine Stimme und fördern so noch vielfältigere Inspirationen auf Plan A!</h3>
-      			</section>
+            <h2>Spenden Sie für neue Vorbilder!</h2>
+            <h3>Geben Sie anderen Menschen eine Stimme und fördern so noch vielfältigere Inspirationen auf Plan A!</h3>
+						<h3>Fördern Sie zusätzlich einen Jugendlichen mit einem Stipendienplatz bei JOBLINGE oder im baseCamp.</h3>
+						<a href="joblinge.de/jetzt-spenden" class="button-link">Jetzt spenden</a>
+			</section>
 			<section class="media-embed">
-				<video src="trailer.mov" type="video/mov" width="90%" height="auto"
-					poster="trailer-standbild.png" autobuffer autoplay controls>
-					<div>Leider unterstützt Ihr Browser kein HTML5. Wir empfehlen, eine aktuelle Version herunterzuladen.</div>
-				</video>
+				<iframe width="700" height="394" src="https://www.youtube.com/embed/xEchxB3dZLA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</section>
 		</main>
+		<footer>
+			<section class="font-white">
+				<h1>Plan A-Kampagne in Zahlen</h1>
+				<div class="table">
+					<h3>55.000€</h3>
+					<p>Finanzierung für JobCamp</p>
+			 	</div>
+				<div class="table">
+					<h3>900</h3>
+					<p>Jugendliche in Ansprache erreicht</p>
+			 	</div>
+				<div class="table">
+					<h3>56</h3>
+					<p>Teilnehmende am JobCamp</p>
+			 	</div>
+				<div class="table">
+					<h3>40</h3>
+					<p>Gespräche pro Unternehmen bei Jobmesse</p>
+		 		</div>
+			</section>
+		</footer>
 	</body>
 	<link rel="stylesheet" type="text/css" href="design.css">
 <!--	<link rel="stylesheet" type="text/css" href="opacity.css">
